--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@flagship.io/react-sdk": "^3.2.1",
+    "@flagship.io/react-sdk": "^3.2.2-alpha.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
